# tifftool

./: CMakeLists.txt  CMakeSettings.json  seriestifftool.rar
convert2raw/: convert.cpp
downsample/: downsample.cpp
src/: rawreader.h  tiff2raw.cpp  tiff2raw.h  tiffreader.cpp  tiffreader.h  tifftool.cpp  utils.h
statistic/: statistic.cpp
subregion/: subregion.cpp
test/: test.cpp
